--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@mui/x-data-grid": "^6.20.0",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.4",
     "jwt-decode": "^4.0.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
